--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -24,4 +24,6 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+  max-width: 600px;
+  margin: 0 auto;
 }
